Mon Mar 11 15:42:31 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* add PlULong to gprolog.h and PlThrow(ball) to foreign interface
	* improve the FD solver (avoid some cases of C stack overflow, improved fd_domain/3)

Mon Feb 25 13:57:51 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in the FD solver

Wed Nov 28 17:04:46 CET 2012 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in the compiler for byte-code with op/3 directive

Thu Nov 22 16:20:23 CET 2012 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in the debugger
	* modify decompose_file_name/4 (fix problems under windows)
	* add built-in is_absolute_file_name/1 and is_relative_file_name/1
	* modify the compiler include/1 directive handling
	  (if the file to include is not found, seach in directories of parent includers)

Thu Nov 15 16:15:50 CET 2012 <Daniel.Diaz@univ-paris1.fr>

	* modify atom table management (its size can be defined via env. var MAX_ATOM)
	* fix a bug with soft-call inside a meta-call
	* implement term_hash/2 and term_hash/4. Bacward incompatibility:
	  new_atom/3 and and atom_hash/2 no longer exists.
	* fix some little bugs with 64 bits (e.g. stream id)

Tue Oct 30 16:27:21 CET 2012 <Daniel.Diaz@univ-paris1.fr>

	* modify the FD solver to handle very long computations

Mon Sep 24 15:03:11 CEST 2012 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in the compiler (unification with fresh vars in the body)
	* fix a bug with *-> containing ! in the test part (! was not local to the test)
	* fix a bug to configure with sigaction on old linux kernels
	* fix some problems/bugs on 64 bits machine

Fri Jun 15 13:34:45 CEST 2012 <Daniel.Diaz@univ-paris1.fr>

	* improve signal handling

Thu May 31 15:36:46 CEST 2012 <Daniel.Diaz@univ-paris1.fr>

	* add an option --wam-comment to gplc and pl2wam
	* fix multifile directive (works now with an empty predicate as required by ISO)
	* fix absolute_file_name to expand ~ using HOMEDRIVE and HOMEPATH under windows
	  if HOME is not defined
